# py9pfactotum

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: codeql.yml  lint.yml  release.yml
src/py9pfactotum/: __init__.py  client.py  keyring.py  util.py
src/py9pfactotum/_vendor/py9p/: utils.py
