[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py9pfactotum"
authors = [
	{name = "Daniel Moch", email = "daniel@danielmoch.com"}
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: ISC License (ISCL)",
	"License :: OSI Approved :: MIT License",
	"Operating System :: POSIX",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/djmoch/py9pfactotum"

[project.optional-dependencies]
dev = [
	"flit",
	"keyring",
	"mypy",
	"pre-commit",
	"ruff",
	"tox",
]

[project.entry-points."keyring.backends"]
factotum = "py9pfactotum.keyring"

[tool.mypy]
exclude = "/_vendor/"
strict = true

[[tool.mypy.overrides]]
module = [
	"py9pfactotum.client",
	"py9pfactotum.errors",
	"py9pfactotum.keyring",
	"py9pfactotum.util",
]
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
	"py9pfactotum._vendor.py9p.py9p",
	"py9pfactotum._vendor.py9p.utils",
]
follow_imports = "silent"

[tool.ruff]
extend-exclude = ["src/py9pfactotum/_vendor"]
output-format = "concise"

[tool.ruff.lint]
select = [
	# pycodestyle
	"E",
	# pyflakes
	"F",
	# mccabe
	"C90",
	# isort
	"I",
	# pep8-naming
	"N",
	# pyupgrade
	"UP",
	# reff-specific
	"RUF",
]

[tool.tox]
requires = ["tox>=4.26"]
env_list = [
	"3.9",
	"3.10",
	"3.11",
	"3.12",
	"3.13",
]

[tool.tox.env_run_base]
description = "Run lint under {base_python}"
deps = ["-r requirements-dev.txt"]
commands = [
	["ruff", "check", "src{/}py9pfactotum"],
	["mypy", "src{/}py9pfactotum"],
]

[tool.yapf]
based_on_style = "pep8"
USE_TABS = false
